<?xml version="1.0"?>
<package>
  <name>mantis_config</name>
  <version>0.0.0</version>
  <description>The mantis_config package</description>

  <maintainer email="pryre@todo.todo">pryre</maintainer>
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->
  <license>MIT</license>
  <!-- <url type="website">http://wiki.ros.org/mantis_uav_config</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>dynamixel_controllers</run_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
