<?xml version="1.0"?>
<package>
  <name>mantis_router_full</name>
  <version>0.0.0</version>
  <description>The mantis_router_full package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="pryre@todo.todo">pryre</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/kinetic_sample_sub_cpp</url> -->


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>mantis_description</build_depend>
  <build_depend>mantis_state</build_depend>
  <build_depend>mantis_msgs</build_depend>
  <build_depend>mantis_params</build_depend>
  <build_depend>mantis_kinematics</build_depend>
  <build_depend>contrail</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>tinyspline_ros</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>contrail</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>mantis_description</run_depend>
  <run_depend>mantis_state</run_depend>
  <run_depend>mantis_params</run_depend>
  <run_depend>mantis_kinematics</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>tinyspline_ros</run_depend>
  <run_depend>actionlib</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
