<?xml version="1.0"?>
<!-- This Source Code Form is subject to the terms of the Mozilla Public
   - License, v. 2.0. If a copy of the MPL was not distributed with this
   - file, You can obtain one at https://mozilla.org/MPL/2.0/. -->
<package>
  <name>mantis_state</name>
  <version>0.0.0</version>
  <description>The mantis_state package</description>

  <maintainer email="pryre@todo.todo">pryre</maintainer>
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->
  <license>MIT</license>
  <!-- <url type="website">http://wiki.ros.org/mantis_uav_config</url> -->

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>mantis_msgs</build_depend>
  <build_depend>mantis_description</build_depend>
  <build_depend>mantis_params</build_depend>
  <build_depend>dh_parameters</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>mavros_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>eigen</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>mantis_msgs</run_depend>
  <run_depend>mantis_params</run_depend>
  <run_depend>dh_parameters</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>mavros_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>eigen</run_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
